# space-trashman-blues

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  Makefile  Makefile.DOS  Makefile.em  README.md  base.pfs  c-cpp.yml  derelcit 16bits.xcf  index.html  mkdocs.yml  search.html  sitemap.xml  update-coverage.sh
core/: CMakeLists.txt  Doxyfile  LICENSE  Makefile  Makefile.DOS  build-with-coverage.sh  index.html  mkdocs.yml  update-coverage.sh
core/XcodeMac12/Derelict-Core.xcodeproj/: project.pbxproj
core/docs/: core.md  ee-frontend.md  episode0.md  gl-frontend.md  index.md  mx-frontend.md  my-frontend.md  mz-frontend.md
core/include/: Core.h  Derelict.h  Parser.h
core/src/: Core.c  Derelict.c  Parser.c  main.c
core/tests/: TestDerelict.cpp  TestInventoryManipulation.cpp  TestMovement.cpp  TestObjectManipulation.cpp  TestParser.cpp  TestVictoryConditionsAndEndings.cpp
ee_frontend/: CMakeLists.txt  Makefile  Makefile.ee  Makefile.em  Makefile.gx  Makefile.ps2  Makefile.wii  README.md  base.pfs  manifest.json  minimal.html  service-worker.js
ee_frontend/NDK-version/: build.gradle.kts  settings.gradle.kts
ee_frontend/NDK-version/app/: build.gradle.kts
ee_frontend/SoundSystem/: NullMusic.c
ee_frontend/Xcode4_gl2/Derelict128.xcodeproj/: project.pbxproj
ee_frontend/Xcode4_gl2/Sub Mare Imperium Derelict (GL 2.1)/: AppDelegate.h  AppDelegate.m  Derelict128-OSX-info.plist  GameWindow.h  GameWindow.m  MyOpenGLView.h  MyOpenGLView.m  main.m
ee_frontend/Xcode4_gl2/Sub Mare Imperium Derelict (GL ES 2)/: AppDelegate.h  AppDelegate.m  Derelict128-iOS-Info.plist  (+6 more)
ee_frontend/data/: Makefile  make_package.py
gl_frontend/: CMakeLists.txt  Makefile  Makefile.SDL1  Makefile.SDL2  Makefile.em  Makefile.ntr  Makefile.ultra  README.md  base.pfs  gl_frontend.elf  gl_frontend.nds
gl_frontend/GL1Common/: LoadBitmap.c  LoadBitmapGL1.c  MyOpenGLView.m  Renderer.c  RendererGL1.c  RendererGL1.h  RendererRasterization.c  RendererTesselation.c  Renderer_RasterizationGL1.c  Renderer_TesselationGL1.c
gl_frontend/NDK-version/: build.gradle
gl_frontend/SoundSystem/: NullMusic.c  PCMAudio.c
gl_frontend/Xcode2/: Info.plist  OSXRenderer.m
gl_frontend/Xcode2_gl1/: Derelict-Info.plist  GameView.h  GameView.m  GameWindow.m  Info.plist  MyOpenGLView.h  MyOpenGLView.m  OSXRenderer.h  OSXRenderer.m  main.m
gl_frontend/data/: Makefile  compile_map.py  make_package.py  packer.cpp  requirements.txt
gl_frontend/filesystem/: base.pfs  font.font64
mx_frontend/: CMakeLists.txt  LICENSE  Makefile  Makefile.386  Makefile.DOS  Makefile.SDL1  Makefile.SDL2  Makefile.X11  Makefile.aga  Makefile.ags  Makefile.bax  Makefile.cd32  Makefile.em  Makefile.webos  README.md  base.pfs  dosbox-x.conf  minimal.html  service-worker.js
mx_frontend/DerelictMacOSClassic/: Derelict.xSYM  DerelictMacOSClassic  DerelictRelease  DerelictWorkspace.cww  MacFileReader.c  MacRenderer.c  base.pfs  derelicttheme.aiff
mx_frontend/NDK-version/: build.gradle  build.gradle.kts  settings.gradle.kts
mx_frontend/SoundSystem/: MusicAGA.c  MusicDOS.cpp  PCMAudio.c  PCMAudio.h  SoundSystem.h  timer.cpp  timer.h
mx_frontend/UWP2022/: App.xaml  App.xaml.cpp  App.xaml.h  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  UWP2022.sln  UWP2022.vcxproj  UWP2022.vcxproj.filters
mx_frontend/Xcode2/: GameView.h  GameView.m  GameWindow.h  GameWindow.m  OSXRenderer.m  The Mistral Report-Info.plist  main.m
mx_frontend/data/: Makefile  check_textures.py  compile_map.py  distiller.cpp  make_package.py  trigger.cpp
my_frontend/: CMakeLists.txt  Derelict smooth.c  Derelict.c  Doxyfile  Makefile  Makefile.386  Makefile.464  Makefile.bax  Makefile.cpc  Makefile.fcm  Makefile.ia16  Makefile.msx  Makefile.ngb  Makefile.sm  Makefile.sm3  Makefile.sm4  Makefile.smd  Makefile.swan  Makefile.zxp  Makefile.zxs  README.md  base.pfs  demo.map  derelict.rom  game.cdt  game.dsk  ld65.cfg  madame_y
my_frontend/CPCVersion/: Makefile
my_frontend/Derelict.c-sms-sms-libcv/: Derelict.c  DerelictCore.c  Parser.h
my_frontend/MSDOS/: build.sh  derelict.com
my_frontend/SMDVersion/: smd.c
my_frontend/Xcode2/: Derelict-Info.plist  GameView.h  GameView.m  OSXRenderer.m  main.m
my_frontend/boot/: rom_head.c
my_frontend/cfg/: build_config.mk
my_frontend/data/: Makefile  make_package.py  packer.c  packer.cpp  rlecompressor.c
my_frontend/ia16data/: Makefile
my_frontend/include/: Engine3D.h  GamepadUI.h  HackingMinigame.h  Menu.h  Renderer.h  TMS9918.h  UI.h  YM2413.h  font.h  map-data.h  map.h
my_frontend/old/: mode4test.c
my_frontend/src/: AY38910.c  Crawler.c  Credits.c  Engine3D.c  Engine3D.h  Events.c  GameMenu.c  GamepadUI.c  HackingMinigame.c  Help.c  KeyboardUI.c  Main.c  MainMenu.c  Menu.c  RendererRasterizer.c  RendererScene.c  RendererTesselation.c  TMS9918.c  UI.c  YM2413.c  cpc.c  demo.c  gb.c  map.h  maps.h  msdos.c  msx.c  nes.c  sdl2.c  smd.c  sms.c  speccy.c  spectrum.c  swan.c
mz_frontend/: CMakeLists.txt  Doxyfile  Makefile.286  Makefile.386  Makefile.DOS  Makefile.atari  Makefile.bax  Makefile.cd32  Makefile.em  Makefile.ia16  Makefile.mint  Makefile.ocs  Makefile.sm4  README.md  base.pfs  base4.pfs
mz_frontend/AmigaVersion/: AmigaRenderer.c
mz_frontend/AtariVersion/: AtariInt.h  AtariRenderer.c
mz_frontend/DerelictMacOSClassic/: Classic Toolbox Debug.xSYM  DerelictDebug
mz_frontend/Engine3D/: Engine3D.c  Engine3D.h  HackingMinigame.c  basepfs.h  demo.c  map.h  maps.h
mz_frontend/MSDOSVersion/: Makefile  msdos.c
mz_frontend/MegaDriveVersion/: megadrive.c
mz_frontend/Mistral OCS/: OSXRenderer.m
mz_frontend/SDLVersion/: sdl2.c
mz_frontend/Xcode2/: GameView.m  OSXRenderer.m
mz_frontend/XcodeProj/: GameView.m  GameWindow.m
mz_frontend/data/: Makefile  compile_map.py  make_package.py  packer.cpp
mz_frontend/data4/: Makefile
mz_frontend/data5/: Makefile
mz_frontend/include/: GamepadUI.h  KeyboardUI.h  Renderer.h  UI.h  map.h
mz_frontend/src/: Crawler.c  Events.c  HackingMinigame.c  KeyboardUI.c  Main.c  RendererRasterizer.c  RendererScene.c  RendererTesselation.c  UI.c
(+1461 files in other folders)
